<resources>
    <string name="app_name">OwlTIME</string>
    <string name="welcome">Bienvenido!</string>
    <string name="start">Por favor ingrese sus datos</string>

    <string name="btnSave">GUARDAR</string>
    <string name="btnSignUp">REGISTRARSE</string>
    <string name="btnSignIn">ACCEDER</string>

    <string name="titleSignUp">Registrarse</string>
    <!-- Formulario Registrarse y Cuenta -->
    <string name="firstName">Nombre</string>
    <string name="lastName">Apellidos</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_events">Eventos</string>
    <string name="title_subjects">Asignaturas</string>
    <string name="title_account">Cuenta</string>
    <!-- Navegación -->
    <string name="events">Eventos</string>
    <string name="subjects">Asignaturas</string>
    <string name="account">Cuenta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="create_event">Crear Evento</string>
    <string name="title">Título</string>
    <string name="date_time">Fecha y Hora</string>
    <string name="subject">Asignatura</string>
    <string name="event_school">Evento escolar</string>
    <string name="btnCreate">CREAR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
